--- a/index.css
+++ b/index.css
@@ -6,6 +6,19 @@ body {
     color: white;
     text-align: center;
 }
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box {
+    width: 350px;
+    height: 300px;
+    background-color: #07381d;
+    border-radius: 20px;
+}
 
 h1 {
     color: goldenrod;
